[project]

name = "civet"
version = "0.7.6"
authors = ["wycats"]
license = "MIT"
description = "civetweb-based server implementation for conduit"
repository = "https://github.com/wycats/rust-civet"

[dependencies]
conduit = "0.7"
semver = "0.1.0"
libc = "0.1"

[dependencies.civet-sys]
path = "civet-sys"
version = "0.1.0"

[dev-dependencies]
route-recognizer = "0.1.0"
