[package]

name = "civet-sys"
version = "0.1.4"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "civet"
build = "build.rs"
license = "MIT"
repository = "https://github.com/wycats/rust-civet"
description = "Native bindings to the libcivetweb library"

[lib]
name = "civet_sys"
path = "lib.rs"
